syntax = "proto3";
package hello;
// 第一个分割参数，输出路径；第二个设置生成类的包路径

option go_package = "./proto/hello";



// 设置服务名称
service Greeter {
  // 设置方法
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  // 设置服务流rpc
  rpc searchOrders(HelloRequest) returns (stream HelloReply);
  // 设置客户流rpc
  rpc updateOrders(stream HelloRequest) returns (stream HelloReply);
  // 设置双工rpc
  rpc processOrders(stream HelloRequest) returns (stream HelloReply);
}

// 请求信息用户名.
message HelloRequest {
  string name = 1;
}

// 响应信息
message HelloReply {
  string message = 1;
}